Minor edits to all JS files

--- a/src/pages/create-ticket.html
+++ b/src/pages/create-ticket.html
@@ -44,17 +44,17 @@
 			margin-top: 10px;
 		}
 
-		form input[type="text"]:focus, form textarea:focus {
+		input[type="text"]:focus, textarea:focus {
 			outline: 0;
 			border-color: var(--colours-orange);
 		}
 		form button {
 			padding: 5px;
 			border: var(--colours-orange) 2px solid;
-			color: var(--colours-orange);
+			color: black;
 			background: transparent;
 			outline: 0;
-			font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+			font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
 			display: block;
 			margin-top: 10px;
 		}
