Minor edit to CSS

--- a/src/pages/create-ticket.html
+++ b/src/pages/create-ticket.html
@@ -44,7 +44,7 @@
 			margin-top: 10px;
 		}
 
-		input[type="text"]:focus, textarea:focus {
+		form input[type="text"]:focus, form textarea:focus {
 			outline: 0;
 			border-color: var(--colours-orange);
 		}
