Add essential scripts to page

--- a/src/pages/list-tickets.html
+++ b/src/pages/list-tickets.html
@@ -92,7 +92,8 @@
 	</div>
 
 	<script src="/assets/js/getTickets.js"></script>
-	<script src="/assets/js/getUserByID.js"></script>
+	<script src="/assets/js/getUserById.js"></script>
+	<script src="/assets/js/getTicketById.js"></script>
 	<script>
 		// allTickets is a variable that will always store all the tickets.
 
